# Rust-WFP

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml  linker-wrapper.bat
src/: main.rs  wfp.rs
